--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ owner:
   disqus-shortname: post-engineering
   twitter:
   facebook:
-  github: http://post-engineering.com
+  github: post-engineering
   stackexchange:
   linkedin:
   instagram:
